2009-11-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSplitView.m: Correct the storing of the splitter locations
	in the defaults system (the autosave mechanism) ... was using NSNumber
	keys which was causing this to fail.

2009-11-26 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTableView.m: ([-noteNumberOfRowsChanged]) fixed to redraw
	the rectangle in the superview if the receiver shrinks.

2009-11-25  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSCell.m (-_updateFieldEditor:): Don't write back
	unchanged strings to the field editor. Should prevent the editor's
	selection from changing when -validateEditing is called.

	* Source/NSCell.m (-setAttributedStringValue:): Consider the
	attributed string a valid object if the cell has no formatter.

	* Source/NSTextField.m (-textDidEndEditing:): Fix bug in
	textDidEndEditing:.
	Patch by Doug Simons <doug.simons@testplant.com>.

2009-11-20 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTheme.m:
	* Headers/Additions/GNUstepGUI/GSTheme.h:
	Added support for overriding methods in any class by implementing
	a corresponding method in your GSTheme subclass.

2009-11-19 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTheme.m:
	* Source/NSMenuItemCell.m:
	* Source/GSThemeDrawing.m:
	* Source/NSScrollView.m:
	* Headers/Additions/GNUstepGUI/GSTheme.h:
	Separate cache control from normal fetching of tiles and colors.

2009-11-19 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Additions/GNUstepGUI/GSTheme.h:
	Improve documentation of -activate and -deactivate

2009-11-16 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMenuItemCell.m:
	* Source/GSThemeDrawing.m:
	* Headers/Additions/GNUstepGUI/GSTheme.h:
	Removed duplicate theming methods...
	The ([-arrowImageForMenuItemCell]) method seems to have duplicated the
	([-imageNamed:]) method (for the @"NSMenuItem" image) and the
	([-backgroundColorForMenuItemCell:state:]) method seemed to have
	duplicated the ([colorNamed:state:cache]) method.